--- a/styles/global.css
+++ b/styles/global.css
@@ -1,2 +1,3 @@
 // Não chamei esse estilo no código html. O professor o criou, mas eu não. Vou deixar anotado aqui o que, teoricamente, viria nesse documento como estilos globais. 
 // Aqui ele aplicou o margin: 0; padding: 0 e box-sizing: border-box
+// Colocar cores :root no global
